--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h2>Welcome to our store!</h2>
         <p>Browse our products and add them to your cart.</p>
-        <img src="images/index.jpg" alt="Store Image" class="responsive-img">
+        <img src="index.jpg" alt="Store Image" class="responsive-img">
     </main>
     <footer>
         <p>&copy; 2025 My E-Commerce Website</p>
