--- a/products.html
+++ b/products.html
@@ -21,37 +21,37 @@
         <h2>Products</h2>
         <div class="product-list">
             <div class="product">
-                <img src="images/coat.webp" alt="Product 1" class="responsive-img">
+                <img src="coat.webp" alt="Product 1" class="responsive-img">
                 <h3>Product 1</h3>
                 <p>Price: $10</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="images/pink.webp" alt="Product 2" class="responsive-img">
+                <img src="pink.webp" alt="Product 2" class="responsive-img">
                 <h3>Product 2</h3>
                 <p>Price: $20</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="images/coat2.webp" alt="Product 3" class="responsive-img">
+                <img src="coat2.webp" alt="Product 3" class="responsive-img">
                 <h3>Product 3</h3>
                 <p>Price: $30</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="images/blue.webp" alt="Product 4" class="responsive-img">
+                <img src="blue.webp" alt="Product 4" class="responsive-img">
                 <h3>Product 4</h3>
                 <p>Price: $40</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="images/tseart.webp" alt="Product 5" class="responsive-img">
+                <img src="tseart.webp" alt="Product 5" class="responsive-img">
                 <h3>Product 5</h3>
                 <p>Price: $50</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="images/white.webp" alt="Product 6" class="responsive-img">
+                <img src="white.webp" alt="Product 6" class="responsive-img">
                 <h3>Product 6</h3>
                 <p>Price: $60</p>
                 <button>Add to Cart</button>
